--- a/SpringBootInjectionGit/src/main/resources/mesage.properties
+++ b/SpringBootInjectionGit/src/main/resources/mesage.properties
@@ -1,1 +1,4 @@
 texto.indexcontroller.index.titulo= Application Properties, :);
+server.port=8089
+padre.nombre = Luis Fabio
+padre.apellido = Alvarez
